--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="">Sobre Mim</a>
+            <a href="">Serviços</a>
+            <a href="">Currículo</a>
+            <a href="">Portfolio</a>
+            <a href="">Contato</a>
+        </nav>
+    </header>
 </body>
 
 </html>
