--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <a href="">Contato</a>
         </nav>
     </header>
+
+
+    <footer>
+        © Copyright Portfólio Dylan Clark - 2021
+    </footer>
 </body>
 
 </html>
