--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
         </nav>
     </header>
 
+    <main>
+        <div class="sobreMin">
+            <h2>Sobre Mim</h2>
+            <h3>FullStack Developer JavaScript & Java | Transformação Digital & Sistemas Mobile</h3>
+            <p>Olá eu sou Dylan Clark, Full Stack Developer. Apaixonado por tecnologia e desenvolvimento
+                de sistemas, entusiasta em UX e UI. Professor de Programação na Udemy e Criador de Conteúdo
+                sobre tecnologia e desenvolvimento de software. Sou um cara esforçado, auto didata e procuro
+                sempre está aprendendo algo novo e me mantendo atualizado sobre novas tecnologias. Meu
+                maior sonho é melhorar a vida das pessoas através da tecnologia.</p>
+            <p>Apaixonado por inovação e experimentos em projetos com novas tecnologias aplicando JavaScript:
+                Vamos inovar juntos no <a href="https://github.com/Dylan-Clark-Dev">GitHub?</a> </p>
+        </div>
+    </main>
 
     <footer>
         © Copyright Portfólio Dylan Clark - 2021
