Lista de serviços

--- a/index.html
+++ b/index.html
@@ -30,6 +30,26 @@
             <p>Apaixonado por inovação e experimentos em projetos com novas tecnologias aplicando JavaScript:
                 Vamos inovar juntos no <a href="https://github.com/Dylan-Clark-Dev">GitHub?</a> </p>
         </div>
+
+        <div class="servicos">
+            <ul>
+                <li>
+                    <h3>Sites</h3>
+                    <img src="" alt="">
+                    <p>Desenvolvimento de Sites</p>
+                </li>
+                <li>
+                    <h3>Mobile</h3>
+                    <img src="" alt="">
+                    <p>Desenvolvimento de Aplicativos</p>
+                </li>
+                <li>
+                    <h3>Professor</h3>
+                    <img src="" alt="">
+                    <p>Professor na Udemy</p>
+                </li>
+            </ul>
+        </div>
     </main>
 
     <footer>
