--- a/curriculo.html
+++ b/curriculo.html
@@ -7,7 +7,52 @@
 </head>
 
 <body>
+    <h1>Currículo</h1>
 
+    <ul>
+        <li>
+            <h2>2021</h2>
+
+            <h3>Pós Graduação</h3>
+            <h4>Faculdade Descomplica</h4>
+            <p>Projetos de aplicativos móveis multiplataforma</p>
+
+            <h3>Formação: Excel VBA</h3>
+            <h4>Alura</h4>
+            <p>Excel: Domine o editor de planilhas (de 15/02/2021 a 17/02/2021) 10hrs</p>
+            <p>Funções com Excel: operações matemáticas e filtros (de 16/02/2021 a 19/02/2021) 10hrs</p>
+        </li>
+        <li>
+            <h2>2020</h2>
+
+            <h3>DevOps</h3>
+            <h4>Alura</h4>
+            <p>Git e Github: Estratégias de ramificação, Conflitos e Pull Requests (de 27/10/2020 a 22/11/2020) 8hrs</p>
+            <p>Git e Github: Controle e compartilhe seu código (de 25/09/2020 a 20/10/2020) 6hrs</p>
+
+            <h3>Formação: Front-end</h3>
+            <h4>Alura</h4>
+            <p>HTML5 e CSS3 parte 1: A primeira página da Web (de 17/09/2020 a 16/10/2020) 8hrs</p>
+            <p>HTML5 e CSS3 parte 2: Posicionamento, listas e navegação (de 16/10/2020 a 21/10/2020) 8hrs</p>
+            <p>HTML5 e CSS3 parte 3: Trabalhando com formulários e tabelas (de 21/10/2020 a 28/10/2020) 8hrs</p>
+            <p>HTML5 e CSS3 parte 4: Avançando no CSS (de 28/10/2020 a 07/11/2020) 8hrs</p>
+        </li>
+        <li>
+            <h2>2019</h2>
+
+            <h3>Graduação Concluída</h3>
+            <h4>Faculdade Cearense</h4>
+            <p>Análise e Desenvolvimento de Sistemas</p>
+        </li>
+
+        <li>
+            <h2>2017</h2>
+
+            <h3>Graduaçaõ Inicio</h3>
+            <h4>Faculdade Cearense</h4>
+            <p>Análise e Desenvolvimento de Sistemas</p>
+        </li>
+    </ul>
 </body>
 
 </html>
