Adicionando menu e rodapé a página

--- a/curriculo.html
+++ b/curriculo.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="">Sobre Mim</a>
+            <a href="">Serviços</a>
+            <a href="">Currículo</a>
+            <a href="">Portfolio</a>
+            <a href="">Contato</a>
+        </nav>
+    </header>
+
     <h1>Currículo</h1>
 
     <ul>
@@ -53,6 +64,10 @@
             <p>Análise e Desenvolvimento de Sistemas</p>
         </li>
     </ul>
+
+    <footer>
+        © Copyright Portfólio Dylan Clark - 2021
+    </footer>
 </body>
 
 </html>
