Aplicando css no cabeçalho e no sobremin

--- a/curriculo.html
+++ b/curriculo.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Currículo</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="">Sobre Mim</a>
-            <a href="">Serviços</a>
-            <a href="">Currículo</a>
-            <a href="">Portfolio</a>
-            <a href="">Contato</a>
-        </nav>
+        <div class="container">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="">Sobre Mim</a>
+                <a href="">Serviços</a>
+                <a href="curriculo.html">Currículo</a>
+                <a href="">Portfolio</a>
+                <a href="">Contato</a>
+            </nav>
+        </div>
     </header>
 
     <h1>Currículo</h1>
