--- a/index.html
+++ b/index.html
@@ -4,73 +4,83 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="">Sobre Mim</a>
-            <a href="">Serviços</a>
-            <a href="">Currículo</a>
-            <a href="">Portfolio</a>
-            <a href="">Contato</a>
-        </nav>
+        <div class="container">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="">Sobre Mim</a>
+                <a href="">Serviços</a>
+                <a href="curriculo.html">Currículo</a>
+                <a href="">Portfolio</a>
+                <a href="">Contato</a>
+            </nav>
+        </div>
     </header>
 
     <main>
         <div class="sobreMin">
+            <img src="foto-perfil.jpg">
             <h2>Sobre Mim</h2>
             <h3>FullStack Developer JavaScript & Java | Transformação Digital & Sistemas Mobile</h3>
-            <p>Olá eu sou Dylan Clark, Full Stack Developer. Apaixonado por tecnologia e desenvolvimento
+            <p>
+                Olá eu sou Dylan Clark, Full Stack Developer. Apaixonado por tecnologia e desenvolvimento
                 de sistemas, entusiasta em UX e UI. Professor de Programação na Udemy e Criador de Conteúdo
                 sobre tecnologia e desenvolvimento de software. Sou um cara esforçado, auto didata e procuro
                 sempre está aprendendo algo novo e me mantendo atualizado sobre novas tecnologias. Meu
-                maior sonho é melhorar a vida das pessoas através da tecnologia.</p>
+                maior sonho é melhorar a vida das pessoas através da tecnologia.
+            </p>
             <p>Apaixonado por inovação e experimentos em projetos com novas tecnologias aplicando JavaScript:
                 Vamos inovar juntos no <a href="https://github.com/Dylan-Clark-Dev">GitHub?</a> </p>
-        </div>
 
-        <div class="servicos">
-            <ul>
-                <li>
-                    <h3>Sites</h3>
-                    <img src="" alt="">
-                    <p>Desenvolvimento de Sites</p>
-                </li>
-                <li>
-                    <h3>Mobile</h3>
-                    <img src="" alt="">
-                    <p>Desenvolvimento de Aplicativos</p>
-                </li>
-                <li>
-                    <h3>Professor</h3>
-                    <img src="" alt="">
-                    <p>Professor na Udemy</p>
-                </li>
-            </ul>
-        </div>
 
-        <div class="contato">
-            <form action="/pagina-processa-dados-do-form" method="post">
-                <div>
-                    <label for="name">Nome:</label>
-                    <input type="text" id="name" />
-                </div>
-                <div>
-                    <label for="mail">E-mail:</label>
-                    <input type="email" id="mail" />
-                </div>
-                <div>
-                    <label for="msg">Mensagem:</label>
-                    <textarea id="msg"></textarea>
-                </div>
-                <div class="button">
-                    <button type="submit">Enviar sua mensagem</button>
-                </div>
-            </form>
         </div>
     </main>
+
+    <div class="servicos">
+        <ul>
+            <li>
+                <h3>Sites</h3>
+                <img src="" alt="">
+                <p>Desenvolvimento de Sites</p>
+            </li>
+            <li>
+                <h3>Mobile</h3>
+                <img src="" alt="">
+                <p>Desenvolvimento de Aplicativos</p>
+            </li>
+            <li>
+                <h3>Professor</h3>
+                <img src="" alt="">
+                <p>Professor na Udemy</p>
+            </li>
+        </ul>
+    </div>
+
+    <div class="contato">
+        <form action="/pagina-processa-dados-do-form" method="post">
+            <div>
+                <label for="name">Nome:</label>
+                <input type="text" id="name" />
+            </div>
+            <div>
+                <label for="mail">E-mail:</label>
+                <input type="email" id="mail" />
+            </div>
+            <div>
+                <label for="msg">Mensagem:</label>
+                <textarea id="msg"></textarea>
+            </div>
+            <div class="button">
+                <button type="submit">Enviar sua mensagem</button>
+            </div>
+        </form>
+    </div>
+
 
     <footer>
         © Copyright Portfólio Dylan Clark - 2021
