Adicionando icones a lista de serviços

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 sobre tecnologia e desenvolvimento de software. Sou um cara esforçado, auto didata e procuro
                 sempre está aprendendo algo novo e me mantendo atualizado sobre novas tecnologias. Meu
                 maior sonho é melhorar a vida das pessoas através da tecnologia.
-            </p>
+            </p> <br>
             <p>Apaixonado por inovação e experimentos em projetos com novas tecnologias aplicando JavaScript:
                 Vamos inovar juntos no <a href="https://github.com/Dylan-Clark-Dev">GitHub?</a> </p>
 
@@ -45,17 +45,17 @@
         <ul>
             <li>
                 <h3>Sites</h3>
-                <img src="" alt="">
+                <img src="code.png" alt="">
                 <p>Desenvolvimento de Sites</p>
             </li>
             <li>
                 <h3>Mobile</h3>
-                <img src="" alt="">
+                <img src="phone.png" alt="">
                 <p>Desenvolvimento de Aplicativos</p>
             </li>
             <li>
                 <h3>Professor</h3>
-                <img src="" alt="">
+                <img src="teacher.png" alt="">
                 <p>Professor na Udemy</p>
             </li>
         </ul>
